fix/SocialButton mobile & avatar img

--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ p {
 }
 
 button:focus {
-  outline: 4px solid #00aaff;
+  outline: 2px solid #00aaff;
   background-color: rgba(0, 170, 255, 0.2);
 }
 
